--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,25 @@ services:
     image: confluentinc/cp-kafka:latest
     ports:
       - "9092:9092"
+      - "29092:29092"
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:29092,EXTERNAL://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  rest-proxy:
+    image: confluentinc/cp-kafka-rest:latest
+    environment:
+      KAFKA_REST_HOST_NAME: "rest-proxy"
+      KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
+      KAFKA_REST_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+      KAFKA_REST_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka:29092"
+    depends_on:
+      - kafka
+    ports:
+      - "8082:8082"
   
   prometheus:
     image: prom/prometheus:latest
